# anagramarama

./: .gitignore  CMakeLists.txt  anagramarama.desktop  anagramarama.metainfo.xml  anagramarama.spec  gpl.txt  makefile.linux  readme
gamerzilla/: anagramarama.game
html/: common.css  index.html  screenshots.html
i18n/: en  pt
i18n/en_GB/: wordlist.txt
i18n/fr/: config.ini  wordlist.txt
i18n/uk/: config.ini  wordlist.txt
man/: anagramarama.6
src/: ag.c  ag.h  ag_core.c  linked.c  linked.h  sdlscale.c  sdlscale.h  sprite.c  sprite.h
tools/: refine_dict_fr.tcl  refine_dict_uk.tcl
